--- a/경력.ipynb
+++ b/경력.ipynb
@@ -12,6 +12,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "031af299",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4db1638f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fb23f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "55248ebf",
    "metadata": {},
@@ -38,7 +64,7 @@
     }
    ],
    "source": [
-    "datetime.datetime(2017, 6, 26) - datetime.datetime(2019, 4, 27)"
+    "datetime.datetime(2017, 6, 26) - datetime.datetime(2019, 4, 27) # 군대 670일"
    ]
   },
   {
@@ -59,7 +85,7 @@
     }
    ],
    "source": [
-    "datetime.datetime(2019, 9, 16) - datetime.datetime(2019, 5, 25)"
+    "datetime.datetime(2019, 9, 16) - datetime.datetime(2019, 5, 25) # 워터파크 114일"
    ]
   },
   {
@@ -80,7 +106,7 @@
     }
    ],
    "source": [
-    "datetime.datetime(2020, 12, 13) - datetime.datetime(2020, 9, 30)"
+    "datetime.datetime(2020, 12, 13) - datetime.datetime(2020, 9, 30) # 버거킹 74일"
    ]
   },
   {
@@ -101,7 +127,7 @@
     }
    ],
    "source": [
-    "datetime.datetime(2020, 7, 1) - datetime.datetime(2020, 2, 17)"
+    "datetime.datetime(2020, 7, 1) - datetime.datetime(2020, 2, 17) # LG공장 135일"
    ]
   },
   {
@@ -122,7 +148,7 @@
     }
    ],
    "source": [
-    "26+14+28+28+20+6+5+11+3"
+    "26+14+28+28+20+6+5+11+3 # 통영 물차 + 오렌지 팩토리 + 공장 잠깐 141일"
    ]
   },
   {
